src/objects/Lead/fields/SICCode__c.field-meta.xml
<CustomField>
    <fullName>SICCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIC Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>