src/objects/Lead/listViews/High_Revenue_Leads.listView-meta.xml
<ListView>
    <fullName>High_Revenue_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.ANNUAL_REVENUE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.ANNUAL_REVENUE</field>
        <operation>greaterOrEqual</operation>
        <value>USD 500000</value>
    </filters>
    <label>High-Revenue Leads</label>
</ListView>